<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/host_title"
        android:textColor="#222222"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/host_desc"
        android:textColor="#666666"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/show_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/host_loading"
        android:textColor="#ff0000"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_font"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/open_one_apk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/host_open_first"
        android:visibility="gone" />

    <Button
        android:id="@+id/open_two_apk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/open_one_apk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/host_open_second"
        android:visibility="gone" />

</RelativeLayout>
